# second-brain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
skills/second-brain-update/: SKILL.md
src/second_brain/: config.py  migrate.py  server.py
src/second_brain/embeddings/: embedder.py
src/second_brain/notes/: models.py  parser.py  store.py
src/second_brain/search/: connections.py  semantic.py
src/second_brain/storage/: vector_store.py
src/second_brain/todos/: models.py  store.py
tests/: test_chat.py  test_email.py  test_parser.py  test_search.py  test_store.py
