[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain"
version = "0.1.0"
description = "AI-powered second brain MCP server for meeting notes"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "chromadb",
    "sentence-transformers",
    "pydantic",
]

[project.scripts]
second-brain = "second_brain.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
